Fix #navbar transition on Safari

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -43,7 +43,6 @@
 @media only screen and (max-width: 1023px) {
 	:root {
 		--navbar-noshrink: 80px;
-		--navbar-shrinked: 65px;
 	}
 }
 
